Nova versão gerada pelo build Angular

--- a/iFood/iFood.Mercado.API/appsettings.json
+++ b/iFood/iFood.Mercado.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": "Data Source=localhost;Initial Catalog=ifood;User Id=SA;Password=xxxxxxx;"
+    "Database": "Data Source=localhost;Initial Catalog=ifood;User Id=SA;Password=xxxxxxxx;"
   }
   
 }
